# tdbuild

./: .gitignore  MANIFEST.in  README.md  notes.org  pyproject.toml  setup.py
tdbuild/: __init__.py  builder.py  cli.py  constants.py  tdbuild.py  tdfile.template  template.py  utils.py  windows.py
test/: main.c  tdfile.py
tests/: test_tdbuild.py
