[tool.poetry]
name = "tdbuild"
version = "3.0.0"
description = ""
authors = ["spaderthomas <thomas.spader@gmail.com>"]
include = ["tdbuild/tdfile.template"]

[tool.poetry.scripts]
tdbuild = 'tdbuild.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
